# LeagueController

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_data.bat  index.js  install.bat
BinTester/: CMakeLists.txt
BinTester/src/: main.cpp
Common/: CMakeLists.txt
Common/inc/league_controller/: allocator.hpp  config.hpp  derived_type.hpp  duration.hpp  launcher_data.hpp  obfuscation.hpp  profiler.hpp  secure_string.hpp  settings.hpp  shared_memory.hpp  types.hpp
Common/src/: base64.cpp  blowfish.h  duration.cpp  obfuscation.cpp  secure_string.cpp  settings.cpp  shared_memory.cpp  types.cpp
ControllerManager/: CMakeLists.txt
ControllerManager/inc/league_controller/: controller.hpp  controller_input.hpp  controller_input_definition.hpp  controller_listener.hpp  controller_manager.hpp  controller_windows_rawinput.hpp  controller_windows_xinput.hpp
ControllerManager/src/: controller.cpp  controller_input.cpp  controller_listener.cpp  controller_manager.cpp  controller_usage_type.cpp  controller_usage_type.hpp  controller_usage_type_definition.hpp  controller_windows_rawinput.cpp  controller_windows_xinput.cpp
DummyWrapper/: CMakeLists.txt
DummyWrapper/src/: main.cpp
GameOverlay/: CMakeLists.txt  GenerateShader.bat
GameOverlay/ext/: stb_image.h
GameOverlay/ext/Skerm/: .gitmodules  CMakeLists.txt  gen_asdf.ps1
GameOverlay/ext/Skerm/compiler/: CMakeLists.txt
GameOverlay/ext/Skerm/compiler/ext/ASDF/: CMakeLists.txt
GameOverlay/ext/Skerm/compiler/inc/skerm/: compiler.hpp  source_file.hpp
GameOverlay/ext/Skerm/compiler/src/: compiler.cpp  main.cpp  source_file.cpp
GameOverlay/ext/Skerm/data/: index.ui
GameOverlay/ext/Skerm/data/asdf/: ui_anchor.xml  ui_container.xml  ui_image.xml  ui_namespace.xml  ui_text.xml  ui_type.xml
GameOverlay/ext/Skerm/data/asdf/math/: math_add_token.xml  math_base_token.xml  math_divide_token.xml  math_equation_token.xml  math_multiply_token.xml  math_struct_token.xml  math_subtract_token.xml  math_token_type.xml  math_variable_token.xml
GameOverlay/ext/Skerm/data/moustache/: cmake.mst  index.mst  struct_header.mst  struct_source.mst
GameOverlay/ext/Skerm/interpreter/: CMakeLists.txt
GameOverlay/ext/Skerm/interpreter/inc/skerm/: asdf.hpp  asdf_interpreter.hpp  base_types.hpp  math_addition_token.hpp  math_base_token.hpp  math_division_token.hpp  math_equation_token.hpp  math_multiplication_token.hpp  math_struct_token.hpp  math_subtraction_token.hpp  math_token_type.hpp  math_variable_token.hpp  ui_anchor.hpp  ui_color.hpp  ui_container.hpp  ui_image.hpp  ui_namespace.hpp  ui_text.hpp  ui_type.hpp
GameOverlay/ext/Skerm/interpreter/src/skerm/: asdf_interpreter.cpp  base_types.cpp  math_addition_token.cpp  math_base_token.cpp  ui_color.cpp  (+10 more)
GameOverlay/ext/Skerm/math_parser/: CMakeLists.txt
GameOverlay/ext/Skerm/math_parser/src/: math_parser.cpp  tokeniser.cpp  tokens.cpp
GameOverlay/ext/imgui/backends/: imgui_impl_win32.cpp
GameOverlay/ext/imgui/examples/example_glfw_vulkan/: CMakeLists.txt
GameOverlay/ext/sokol/: CMakeLists.txt
GameOverlay/ext/sokol/ext/sokol/: sokol_app.h  sokol_gfx.h
GameOverlay/ext/sokol/inc/: sokol.hpp
GameOverlay/ext/sokol/src/: main.cpp
GameOverlay/inc/game_overlay/: debug_renderer.hpp  font.hpp  image.hpp  image_instance.hpp  imgui_memory_editor.hpp  input.hpp  log.hpp  overlay.hpp  radial_menu.hpp  simple_input.hpp  skerm.hpp  surface.hpp  window.hpp
GameOverlay/shaders/: debug_renderer.glsl  image.glsl  radial_menu.glsl  skerm_container.glsl  skerm_image.glsl  text.glsl
GameOverlay/src/: common.hpp  debug_renderer.cpp  font.cpp  image.cpp  image_instance.cpp  input.cpp  log.cpp  overlay.cpp  ppk_assert.cpp  ppk_assert.h  radial_menu.cpp  renderer.cpp  renderer.hpp  renderer_dx11.cpp  renderer_dx11.hpp  renderer_vtable_dx11.hpp  schrift.c  schrift.h  simple_input.cpp  skerm.cpp  stb_rect_pack.h  surface.cpp  text_pipeline.cpp  window.cpp
GameOverlay/src/shaders/: debug_renderer.hpp  image.hpp  radial_menu.hpp  skerm_container.hpp  skerm_image.hpp  text.hpp
IPC/: CMakeLists.txt
IPC/ext/cpp-ipc/src/libipc/: waiter.h
IPC/inc/league_controller/: connection.hpp  state_base.hpp
IPC/src/: connection.cpp
LeagueController/: CMakeLists.txt
LeagueController/ext/leaguelib/: .gitignore  CMakeLists.txt
LeagueController/ext/leaguelib/ext/spekfile/: CMakeLists.txt
LeagueController/ext/leaguelib/src/navgrid/: navgrid.cpp
LeagueController/ext/leaguelib/src/wad/: wad.cpp  wad_filesystem.cpp
LeagueController/ext/lua/lua-5.4.4/src/: loadlib.c
LeagueController/ext/luajit/: CMakeLists.txt
LeagueController/ext/sol/: config.hpp  forward.hpp  sol.hpp
LeagueController/src/: champion_data.cpp  champion_data.hpp  controller.cpp  controller.hpp  cursor.cpp  cursor.hpp  debug_render.cpp  debug_render.hpp  files_embedded.cpp  files_embedded.hpp  filesystem_embedded.cpp  filesystem_embedded.hpp  issue_order.cpp  issue_order.hpp  item.cpp  item.hpp  lua_wrapper.hpp  main.cpp  script.cpp  script.hpp  script_controller.cpp  script_controller.hpp  script_controller_mapper.cpp  script_controller_mapper.hpp  script_debug.cpp  script_debug.hpp  script_game.cpp  script_game.hpp  script_math.cpp  script_math.hpp  script_output.cpp  script_output.hpp  script_require.cpp  script_require.hpp  script_ui.cpp  script_ui.hpp  setup.cpp  setup.hpp
LeagueInternals/: CMakeLists.txt
LeagueInternals/inc/league_internals/: flag_duo.hpp  game_object.hpp  offset_loader.hpp  offsets.hpp  task_base.hpp  task_gameobject.hpp  task_hud_manager.hpp  task_rendering_flag.hpp  task_spellbook.hpp
LeagueInternals/src/: flag_duo.cpp  game_object.cpp  json.hpp  offset_loader.cpp  offsets.cpp  task_base.cpp  task_gameobject.cpp  task_hud_manager.cpp  task_rendering_flag.cpp  task_spellbook.cpp
MemoryHelper/: CMakeLists.txt
MemoryHelper/ext/: setup.bat
MemoryHelper/inc/memory_helper/: address.hpp  helper_functions.hpp  instruction.hpp
MemoryHelper/src/: helper_functions.cpp  instruction.cpp
OverlayInjector/: CMakeLists.txt
OverlayInjector/src/: main.cpp  process.cpp  process.hpp
(+219 files in other folders)
